--- a/src/css/components/cards/card-basic.css
+++ b/src/css/components/cards/card-basic.css
@@ -1,7 +1,7 @@
 /* Card Basic */
 .card-basic__title[class][class] {
   color: var(--f-k-smk-x);
-  font-size: var(--fy-rs-ca);
+  font-size: var(--font-size-md);
   line-height: var(--d-ar-t-o-n);
   font-weight: var(--jx-zk-pv);
   display: block;
