--- a/src/css/components/header-filter.css
+++ b/src/css/components/header-filter.css
@@ -60,7 +60,7 @@
   outline: 0;
   padding: 0;
   margin: 0;
-  font-size: var(--f-cv-j-j-p);
+  font-size: var(--font-size-xs);
   line-height: var(--f-l-h-bac);
   color: var(--fo-jk-r-s);
   font-weight: var(--jx-zk-pv);
