--- a/src/css/root.css
+++ b/src/css/root.css
@@ -72,29 +72,29 @@
   --spacer-7: 32px;
   --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
-  --fy-rs-ca: 18px;
+  --font-size-md: 18px;
   --d-ar-t-o-n: 22px;
-  --lhy-d-yl: 22px;
+  --font-size-lg: 22px;
   --fme-bf-w: 26px;
-  --g-zgv-nj: 26px;
+  --font-size-xl: 26px;
   --b-x-z-q-l-e: 30px;
-  --cv-p-u-ui: 32px;
+  --font-size-xxl: 32px;
   --hu-t-o-g-n: 36px;
-  --hr-k-udr: 10px;
+  --font-size-xxs: 10px;
   --dpgw-ac: 12px;
-  --f-cv-j-j-p: 12px;
+  --font-size-xs: 12px;
   --f-l-h-bac: 16px;
-  --c-zdwk-p: 14px;
+  --font-size-sm: 14px;
   --j-p-z-kco: 18px;
-  --i-nh-zme: 14px;
+  --font-size-sm: 14px;
   --gvarj-f: 20px;
   --font-size: 16px;
   ---s-l-myu: 20px;
   --font-size: 16px;
   --cb-pewj: 24px;
-  --ll-l-ys-f: 18px;
+  --font-size-md: 18px;
   --f-xgviq: 24px;
-  --kmwb-ss: 18px;
+  --font-size-md: 18px;
   --j-n-c-d-l-h: 28px;
   --e-y-j-d-v-j: 400;
   --jx-zk-pv: 600;
@@ -175,29 +175,29 @@
   --spacer-7: 32px;
   --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
-  --fy-rs-ca: 18px;
+  --font-size-md: 18px;
   --d-ar-t-o-n: 22px;
-  --lhy-d-yl: 22px;
+  --font-size-lg: 22px;
   --fme-bf-w: 26px;
-  --g-zgv-nj: 26px;
+  --font-size-xl: 26px;
   --b-x-z-q-l-e: 30px;
-  --cv-p-u-ui: 32px;
+  --font-size-xxl: 32px;
   --hu-t-o-g-n: 36px;
-  --hr-k-udr: 10px;
+  --font-size-xxs: 10px;
   --dpgw-ac: 12px;
-  --f-cv-j-j-p: 12px;
+  --font-size-xs: 12px;
   --f-l-h-bac: 16px;
-  --c-zdwk-p: 14px;
+  --font-size-sm: 14px;
   --j-p-z-kco: 18px;
-  --i-nh-zme: 14px;
+  --font-size-sm: 14px;
   --gvarj-f: 20px;
   --font-size: 16px;
   ---s-l-myu: 20px;
   --font-size: 16px;
   --cb-pewj: 24px;
-  --ll-l-ys-f: 18px;
+  --font-size-md: 18px;
   --f-xgviq: 24px;
-  --kmwb-ss: 18px;
+  --font-size-md: 18px;
   --j-n-c-d-l-h: 28px;
   --e-y-j-d-v-j: 400;
   --jx-zk-pv: 600;
@@ -283,29 +283,29 @@
   --spacer-7: 32px;
   --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
-  --fy-rs-ca: 18px;
+  --font-size-md: 18px;
   --d-ar-t-o-n: 22px;
-  --lhy-d-yl: 22px;
+  --font-size-lg: 22px;
   --fme-bf-w: 26px;
-  --g-zgv-nj: 26px;
+  --font-size-xl: 26px;
   --b-x-z-q-l-e: 30px;
-  --cv-p-u-ui: 32px;
+  --font-size-xxl: 32px;
   --hu-t-o-g-n: 36px;
-  --hr-k-udr: 10px;
+  --font-size-xxs: 10px;
   --dpgw-ac: 12px;
-  --f-cv-j-j-p: 12px;
+  --font-size-xs: 12px;
   --f-l-h-bac: 16px;
-  --c-zdwk-p: 14px;
+  --font-size-sm: 14px;
   --j-p-z-kco: 18px;
-  --i-nh-zme: 14px;
+  --font-size-sm: 14px;
   --gvarj-f: 20px;
   --font-size: 16px;
   ---s-l-myu: 20px;
   --font-size: 16px;
   --cb-pewj: 24px;
-  --ll-l-ys-f: 18px;
+  --font-size-md: 18px;
   --f-xgviq: 24px;
-  --kmwb-ss: 18px;
+  --font-size-md: 18px;
   --j-n-c-d-l-h: 28px;
   --e-y-j-d-v-j: 400;
   --jx-zk-pv: 600;
@@ -404,29 +404,29 @@
     --spacer-7: 32px;
     --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
       'Helvetica Neue', sans-serif;
-    --fy-rs-ca: 18px;
+    --font-size-md: 18px;
     --d-ar-t-o-n: 22px;
-    --lhy-d-yl: 22px;
+    --font-size-lg: 22px;
     --fme-bf-w: 26px;
-    --g-zgv-nj: 26px;
+    --font-size-xl: 26px;
     --b-x-z-q-l-e: 30px;
-    --cv-p-u-ui: 32px;
+    --font-size-xxl: 32px;
     --hu-t-o-g-n: 36px;
-    --hr-k-udr: 10px;
+    --font-size-xxs: 10px;
     --dpgw-ac: 12px;
-    --f-cv-j-j-p: 12px;
+    --font-size-xs: 12px;
     --f-l-h-bac: 16px;
-    --c-zdwk-p: 14px;
+    --font-size-sm: 14px;
     --j-p-z-kco: 18px;
-    --i-nh-zme: 14px;
+    --font-size-sm: 14px;
     --gvarj-f: 20px;
     --font-size: 16px;
     ---s-l-myu: 20px;
     --font-size: 16px;
     --cb-pewj: 24px;
-    --ll-l-ys-f: 18px;
+    --font-size-md: 18px;
     --f-xgviq: 24px;
-    --kmwb-ss: 18px;
+    --font-size-md: 18px;
     --j-n-c-d-l-h: 28px;
     --e-y-j-d-v-j: 400;
     --jx-zk-pv: 600;
