--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2273,29 +2273,29 @@
   --spacer-7: 32px;
   --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
-  --fy-rs-ca: 18px;
+  --font-size-md: 18px;
   --d-ar-t-o-n: 22px;
-  --lhy-d-yl: 22px;
+  --font-size-lg: 22px;
   --fme-bf-w: 26px;
-  --g-zgv-nj: 26px;
+  --font-size-xl: 26px;
   --b-x-z-q-l-e: 30px;
-  --cv-p-u-ui: 32px;
+  --font-size-xxl: 32px;
   --hu-t-o-g-n: 36px;
-  --hr-k-udr: 10px;
+  --font-size-xxs: 10px;
   --dpgw-ac: 12px;
-  --f-cv-j-j-p: 12px;
+  --font-size-xs: 12px;
   --f-l-h-bac: 16px;
-  --c-zdwk-p: 14px;
+  --font-size-sm: 14px;
   --j-p-z-kco: 18px;
-  --i-nh-zme: 14px;
+  --font-size-sm: 14px;
   --gvarj-f: 20px;
   --font-size: 16px;
   ---s-l-myu: 20px;
   --font-size: 16px;
   --cb-pewj: 24px;
-  --ll-l-ys-f: 18px;
+  --font-size-md: 18px;
   --f-xgviq: 24px;
-  --kmwb-ss: 18px;
+  --font-size-md: 18px;
   --j-n-c-d-l-h: 28px;
   --e-y-j-d-v-j: 400;
   --jx-zk-pv: 600;
@@ -2376,29 +2376,29 @@
   --spacer-7: 32px;
   --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
-  --fy-rs-ca: 18px;
+  --font-size-md: 18px;
   --d-ar-t-o-n: 22px;
-  --lhy-d-yl: 22px;
+  --font-size-lg: 22px;
   --fme-bf-w: 26px;
-  --g-zgv-nj: 26px;
+  --font-size-xl: 26px;
   --b-x-z-q-l-e: 30px;
-  --cv-p-u-ui: 32px;
+  --font-size-xxl: 32px;
   --hu-t-o-g-n: 36px;
-  --hr-k-udr: 10px;
+  --font-size-xxs: 10px;
   --dpgw-ac: 12px;
-  --f-cv-j-j-p: 12px;
+  --font-size-xs: 12px;
   --f-l-h-bac: 16px;
-  --c-zdwk-p: 14px;
+  --font-size-sm: 14px;
   --j-p-z-kco: 18px;
-  --i-nh-zme: 14px;
+  --font-size-sm: 14px;
   --gvarj-f: 20px;
   --font-size: 16px;
   ---s-l-myu: 20px;
   --font-size: 16px;
   --cb-pewj: 24px;
-  --ll-l-ys-f: 18px;
+  --font-size-md: 18px;
   --f-xgviq: 24px;
-  --kmwb-ss: 18px;
+  --font-size-md: 18px;
   --j-n-c-d-l-h: 28px;
   --e-y-j-d-v-j: 400;
   --jx-zk-pv: 600;
@@ -2484,29 +2484,29 @@
   --spacer-7: 32px;
   --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
-  --fy-rs-ca: 18px;
+  --font-size-md: 18px;
   --d-ar-t-o-n: 22px;
-  --lhy-d-yl: 22px;
+  --font-size-lg: 22px;
   --fme-bf-w: 26px;
-  --g-zgv-nj: 26px;
+  --font-size-xl: 26px;
   --b-x-z-q-l-e: 30px;
-  --cv-p-u-ui: 32px;
+  --font-size-xxl: 32px;
   --hu-t-o-g-n: 36px;
-  --hr-k-udr: 10px;
+  --font-size-xxs: 10px;
   --dpgw-ac: 12px;
-  --f-cv-j-j-p: 12px;
+  --font-size-xs: 12px;
   --f-l-h-bac: 16px;
-  --c-zdwk-p: 14px;
+  --font-size-sm: 14px;
   --j-p-z-kco: 18px;
-  --i-nh-zme: 14px;
+  --font-size-sm: 14px;
   --gvarj-f: 20px;
   --font-size: 16px;
   ---s-l-myu: 20px;
   --font-size: 16px;
   --cb-pewj: 24px;
-  --ll-l-ys-f: 18px;
+  --font-size-md: 18px;
   --f-xgviq: 24px;
-  --kmwb-ss: 18px;
+  --font-size-md: 18px;
   --j-n-c-d-l-h: 28px;
   --e-y-j-d-v-j: 400;
   --jx-zk-pv: 600;
@@ -2605,29 +2605,29 @@
     --spacer-7: 32px;
     --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
       'Helvetica Neue', sans-serif;
-    --fy-rs-ca: 18px;
+    --font-size-md: 18px;
     --d-ar-t-o-n: 22px;
-    --lhy-d-yl: 22px;
+    --font-size-lg: 22px;
     --fme-bf-w: 26px;
-    --g-zgv-nj: 26px;
+    --font-size-xl: 26px;
     --b-x-z-q-l-e: 30px;
-    --cv-p-u-ui: 32px;
+    --font-size-xxl: 32px;
     --hu-t-o-g-n: 36px;
-    --hr-k-udr: 10px;
+    --font-size-xxs: 10px;
     --dpgw-ac: 12px;
-    --f-cv-j-j-p: 12px;
+    --font-size-xs: 12px;
     --f-l-h-bac: 16px;
-    --c-zdwk-p: 14px;
+    --font-size-sm: 14px;
     --j-p-z-kco: 18px;
-    --i-nh-zme: 14px;
+    --font-size-sm: 14px;
     --gvarj-f: 20px;
     --font-size: 16px;
     ---s-l-myu: 20px;
     --font-size: 16px;
     --cb-pewj: 24px;
-    --ll-l-ys-f: 18px;
+    --font-size-md: 18px;
     --f-xgviq: 24px;
-    --kmwb-ss: 18px;
+    --font-size-md: 18px;
     --j-n-c-d-l-h: 28px;
     --e-y-j-d-v-j: 400;
     --jx-zk-pv: 600;
@@ -7500,7 +7500,7 @@ select[disabled] {
 
 /* Card Alt 4 */
 .card-alt-4__ratings[class][class] {
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
   align-items: center;
   display: flex;
@@ -7596,7 +7596,7 @@ select[disabled] {
 .card-alt-4__ratings-container[class][class] {
   display: flex;
   align-items: center;
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
 }
 .card-alt-4__ratings-container[class][class]
@@ -7863,7 +7863,7 @@ select[disabled] {
   position: relative;
 }
 .card-alt-4__ratings[class][class] {
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
   -webkit-align-items: center;
   -webkit-box-align: center;
@@ -7961,7 +7961,7 @@ select[disabled] {
   color: var(--fo-jk-r-s);
 }
 .card-alt-4__text[class][class] {
-  font-size: var(--f-cv-j-j-p);
+  font-size: var(--font-size-xs);
   line-height: var(--f-l-h-bac);
   line-height: var(--f-l-h-bac);
   overflow: hidden;
@@ -7981,7 +7981,7 @@ select[disabled] {
 }
 @media (min-width: 744px) {
   .card-alt-4__text[class][class] {
-    font-size: var(--i-nh-zme);
+    font-size: var(--font-size-sm);
     line-height: var(--gvarj-f);
     line-height: var(--gvarj-f);
     overflow: hidden;
@@ -7997,7 +7997,7 @@ select[disabled] {
   }
 }
 .card-alt-4__text-sm[class][class] {
-  font-size: var(--f-cv-j-j-p);
+  font-size: var(--font-size-xs);
   line-height: var(--f-l-h-bac);
 }
 .card-alt-4__media-container[class][class] {
@@ -8070,7 +8070,7 @@ select[disabled] {
   }
 }
 .card-alt-4__title-sm[class][class] {
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
   line-height: var(--j-p-z-kco);
   overflow: hidden;
@@ -8134,7 +8134,7 @@ select[disabled] {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
 }
 /* /Card Alt 4 */
@@ -8273,7 +8273,7 @@ select[disabled] {
 /* Card Basic */
 .card-basic__title[class][class] {
   color: var(--f-k-smk-x);
-  font-size: var(--fy-rs-ca);
+  font-size: var(--font-size-md);
   line-height: var(--d-ar-t-o-n);
   font-weight: var(--jx-zk-pv);
   display: block;
@@ -8435,7 +8435,7 @@ select[disabled] {
   }
 }
 .card-horizontal-outlined__btn-text-size[class][class] {
-  font-size: var(--f-cv-j-j-p);
+  font-size: var(--font-size-xs);
   line-height: var(--f-l-h-bac);
 }
 .card-horizontal-outlined[class][class] {
@@ -8471,7 +8471,7 @@ select[disabled] {
   margin-bottom: var(--spacer-2);
 }
 .card-horizontal-outlined__price-info[class][class] {
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
 }
 /* /Card Horizontal Outlined */
@@ -8929,7 +8929,7 @@ select[disabled] {
   left: 0;
 }
 .card-portrait__overline-compact {
-  font-size: var(--f-cv-j-j-p);
+  font-size: var(--font-size-xs);
   line-height: var(--f-l-h-bac);
 }
 .card-portrait__overline-text-compact {
@@ -8947,11 +8947,11 @@ select[disabled] {
   }
 }
 .card-portrait__pricing-text-mobile {
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
 }
 .card-portrait__secondary-line {
-  font-size: var(--f-cv-j-j-p);
+  font-size: var(--font-size-xs);
   line-height: var(--f-l-h-bac);
   line-height: var(--f-l-h-bac);
   max-height: calc(3 * var(--f-l-h-bac));
@@ -8968,7 +8968,7 @@ select[disabled] {
 }
 @media (min-width: 744px) {
   .card-portrait__secondary-line {
-    font-size: var(--i-nh-zme);
+    font-size: var(--font-size-sm);
     line-height: var(--gvarj-f);
     line-height: var(--gvarj-f);
     max-height: calc(1 * var(--gvarj-f));
@@ -8990,7 +8990,7 @@ select[disabled] {
   }
 }
 .card-portrait__overline {
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
   -webkit-align-items: center;
   -webkit-box-align: center;
@@ -11386,7 +11386,7 @@ fieldset[disabled] .btn {
   width: auto !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--c-zdwk-p) !important;
+  font-size: var(--font-size-sm) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -11410,7 +11410,7 @@ fieldset[disabled] .btn {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--c-zdwk-p) !important;
+  font-size: var(--font-size-sm) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -12077,7 +12077,7 @@ fieldset[disabled] .btn {
   padding-top: var(--spacer-1);
 }
 .btn-filter__text[class][class] {
-  font-size: var(--f-cv-j-j-p);
+  font-size: var(--font-size-xs);
   line-height: var(--f-l-h-bac);
   font-weight: var(--jx-zk-pv);
   display: none;
@@ -12102,7 +12102,7 @@ fieldset[disabled] .btn {
   right: -4px;
 }
 .btn-filter-count__text[class][class] {
-  font-size: var(--hr-k-udr);
+  font-size: var(--font-size-xxs);
   line-height: var(--dpgw-ac);
   color: var(--f-mkcy-f);
   font-weight: var(--h-oqhch);
@@ -13611,7 +13611,7 @@ fieldset[disabled] .btn {
   outline: 0;
   padding: 0;
   margin: 0;
-  font-size: var(--f-cv-j-j-p);
+  font-size: var(--font-size-xs);
   line-height: var(--f-l-h-bac);
   color: var(--fo-jk-r-s);
   font-weight: var(--jx-zk-pv);
@@ -14133,7 +14133,7 @@ fieldset[disabled] .btn {
 .jumbotron-header__text[class][class] {
   color: var(--f-k-smk-x);
   font-weight: var(--h-oqhch);
-  font-size: var(--cv-p-u-ui);
+  font-size: var(--font-size-xxl);
   line-height: var(--hu-t-o-g-n);
 }
 .dir.jumbotron-header__text[class][class] {
@@ -14141,7 +14141,7 @@ fieldset[disabled] .btn {
 }
 @media (max-width: 743px) {
   .jumbotron-header__text[class][class] {
-    font-size: var(--lhy-d-yl);
+    font-size: var(--font-size-lg);
     line-height: var(--fme-bf-w);
   }
 }
@@ -14687,7 +14687,7 @@ fieldset[disabled] .btn {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--c-zdwk-p) !important;
+  font-size: var(--font-size-sm) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -14822,7 +14822,7 @@ fieldset[disabled] .btn {
   width: auto !important;
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
-  font-size: var(--c-zdwk-p) !important;
+  font-size: var(--font-size-sm) !important;
   line-height: var(--j-p-z-kco) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
@@ -14933,7 +14933,7 @@ fieldset[disabled] .btn {
   .page-shell-mobile__alert-header-text[class][class] {
   color: var(--f-k-smk-x);
   font-weight: var(--h-oqhch);
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
 }
 .dir.page-shell-mobile__alert-attr-notifcation[class][class]
@@ -14943,7 +14943,7 @@ fieldset[disabled] .btn {
 .page-shell-mobile__alert-attr-notifcation[class][class]
   .page-shell-mobile__alert-header-desc[class][class] {
   color: var(--f-k-smk-x);
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
 }
 .page-shell-mobile__alert-attr-notifcation[class][class]
@@ -16784,7 +16784,7 @@ fieldset[disabled] .btn {
   z-index: 1!important;
   border-radius: 500px!important;
   color: var(--f-mkcy-f)!important;
-  font-size: var(--hr-k-udr)!important;
+  font-size: var(--font-size-xxs)!important;
   font-weight: var(--h-oqhch)!important;
   height: 1rem!important;
   min-width: 1rem!important;
@@ -17510,7 +17510,7 @@ fieldset[disabled] .btn {
   padding: 0;
   text-decoration: none;
   user-select: auto;
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
   color: var(--f-k-smk-x);
   display: flex;
@@ -17577,7 +17577,7 @@ fieldset[disabled] .btn {
   }
 }
 .a90wtny[class][class] {
-  font-size: var(--f-cv-j-j-p);
+  font-size: var(--font-size-xs);
   line-height: var(--f-l-h-bac);
   color: var(--fo-jk-r-s);
   display: inline-block;
@@ -17600,7 +17600,7 @@ fieldset[disabled] .btn {
   padding: 0;
   text-decoration: none;
   user-select: auto;
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
   color: var(--f-k-smk-x);
   display: flex;
