--- a/src/css/components/cards/card-horizontal-outlined.css
+++ b/src/css/components/cards/card-horizontal-outlined.css
@@ -54,7 +54,7 @@
   }
 }
 .card-horizontal-outlined__btn-text-size[class][class] {
-  font-size: var(--f-cv-j-j-p);
+  font-size: var(--font-size-xs);
   line-height: var(--f-l-h-bac);
 }
 .card-horizontal-outlined[class][class] {
@@ -90,7 +90,7 @@
   margin-bottom: var(--spacer-2);
 }
 .card-horizontal-outlined__price-info[class][class] {
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
 }
 /* /Card Horizontal Outlined */
