--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1082,7 +1082,7 @@
   z-index: 1!important;
   border-radius: 500px!important;
   color: var(--f-mkcy-f)!important;
-  font-size: var(--hr-k-udr)!important;
+  font-size: var(--font-size-xxs)!important;
   font-weight: var(--h-oqhch)!important;
   height: 1rem!important;
   min-width: 1rem!important;
@@ -1808,7 +1808,7 @@
   padding: 0;
   text-decoration: none;
   user-select: auto;
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
   color: var(--f-k-smk-x);
   display: flex;
@@ -1875,7 +1875,7 @@
   }
 }
 .a90wtny[class][class] {
-  font-size: var(--f-cv-j-j-p);
+  font-size: var(--font-size-xs);
   line-height: var(--f-l-h-bac);
   color: var(--fo-jk-r-s);
   display: inline-block;
@@ -1898,7 +1898,7 @@
   padding: 0;
   text-decoration: none;
   user-select: auto;
-  font-size: var(--c-zdwk-p);
+  font-size: var(--font-size-sm);
   line-height: var(--j-p-z-kco);
   color: var(--f-k-smk-x);
   display: flex;
